--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,10 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<sonar.projectKey>papw</sonar.projectKey>
-		<sonar.organization>rodrigofujioka</sonar.organization>
-		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
-		<sonar.login>b372b734a4ee72cf170d1b181db6474c5d7f1844</sonar.login>
+		<sonar.projectKey>srandrey_papw</sonar.projectKey>
+  		<sonar.organization>srandrey</sonar.organization>
+  		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+  		<sonar.login>1b82e6ff2b956c0489c320cdee74e3afd0acb7f3</sonar.login>
 
 	</properties>
 
